--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-# Updated dependencies
-fastapi==0.115.0 
-uvicorn==0.30.6 
-pydantic==2.9.2 
-reportlab==4.2.2 
-pytest==8.3.3 
-httpx==0.27.2 
+# requirements.txt
+fastapi==0.115.0
+uvicorn==0.30.6
+pydantic==2.9.2
+reportlab==4.2.2
+pytest==8.3.3
+httpx==0.27.2
 python-dotenv==1.0.1
+gunicorn
